[tool.poetry]
name = "we-love-fixture"
version = "0.0.0"
description = "We Love Fixture"
authors = ["Adam Hitchcock <adam@northisup.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/NorthIsUp/we-love-fixture"
repository = "https://github.com/NorthIsUp/we-love-fixture"
documentation = "https://we-love-fixture.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/NorthIsUp/we-love-fixture/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
makefun = "^1.9.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.800"
typeguard = "^2.10.0"
xdoctest = {extras = ["colors"], version = "^0.15.3"}
sphinx = "^3.4.3"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.10.0"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.5.0"
Pygments = "^2.7.4"
nox = "^2020.12.31"
nox-poetry = "^0.8.0"

[tool.poetry.scripts]
we-love-fixture = "we_love_fixture.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["we_love_fixture"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = false
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
